src/test/deca/syntax/invalid/created/bigNumbers/big_FLOATDEC.deca
// Description:
//		Affection d'un flottant qui depasse la limite
// Resultat:
//		Ligne 7 : syntax error, this value is too large

{
	float f = 2147483649154111.000000234123412341;

}
